# dovecot-ceph-plugin

./: .gitlab-ci.yml  .travis.yml  CLAUDE.md  Dockerfile  Dockerfile.dev  README-dev.md  README.md  configure.ac  copilot-instructions.md  setup.sh  setup_test_env.sh  startup.sh
.github/workflows/: build.yml  build_plugin.yml
docker/: docker-compose.yml
src/dict-rados/: dict-rados.cpp
src/librmb/: Makefile.am  rados-ceph-config-impl.cpp  rados-ceph-config-impl.h  rados-ceph-config.h  rados-ceph-json-config-impl.cpp  rados-ceph-json-config-impl.h  rados-cluster-impl.cpp  rados-cluster-impl.h  rados-cluster.h  rados-dictionary-impl.cpp  rados-dictionary-impl.h  rados-dictionary.h  rados-dovecot-ceph-cfg-impl.cpp  rados-dovecot-ceph-cfg-impl.h  rados-dovecot-ceph-cfg.h  rados-dovecot-config.cpp  rados-dovecot-config.h  rados-mail-impl.cpp  rados-mail-impl.h  rados-mail.cpp  rados-mail.h  rados-metadata copy-impl.h  rados-metadata-impl.h  rados-metadata-storage-default.cpp  rados-metadata-storage-default.h  rados-metadata-storage-ima.cpp  rados-metadata-storage-ima.h  rados-metadata-storage-impl.h  rados-metadata-storage-module.h  rados-metadata-storage.h  rados-namespace-manager-impl.cpp  rados-namespace-manager-impl.h  rados-namespace-manager.cpp  rados-save-log-impl.cpp  rados-save-log-impl.h  rados-save-log.h  rados-storage-impl.cpp  rados-storage-impl.h  rados-storage.h  rados-util-impl.cpp  (+5 more)
src/librmb/tools/rmb/: Makefile.am  ls_cmd_parser.h  ls_cmd_parser_impl.cpp  ls_cmd_parser_impl.h  mailbox_tools.cpp  mailbox_tools.h  mailbox_tools_impl.cpp  mailbox_tools_impl.h  rados-mail-box-impl.h  rados-mail-box.h  rmb-commands-impl.cpp  rmb-commands-impl.h  rmb-commands.cpp  rmb-commands.h  rmb.cpp
src/storage-engine/: storage-backend-factory.h
src/storage-interface/: Makefile.am  rados-ceph-config.h  rados-ceph-json-config.h  rados-cluster.h  rados-dictionary.h  rados-dovecot-ceph-cfg.h  rados-guid-generator.h  rados-mail.h  rados-metadata-storage-module.h  rados-metadata-storage.h  rados-metadata.h  rados-namespace-manager.h  rados-plugin-logger.h  rados-save-log.h  rados-storage.h  rados-types.h  rados-util.h  rbox-io-ctx.h
src/storage-interface/tools/rmb/: Makefile.am  ls_cmd_parser.h  mailbox_tools.h  rados-mail-box.h  rmb-commands.h
src/storage-rbox/: Makefile.am  doveadm-rbox-plugin.cpp  istream-bufferlist.cpp  istream-bufferlist.h  ostream-bufferlist.cpp  ostream-bufferlist.h  rbox-copy.cpp  rbox-mail.cpp  rbox-mail.h  rbox-save.cpp  rbox-save.h  rbox-storage.cpp  rbox-storage.hpp  rbox-sync-rebuild.cpp  rbox-sync-rebuild.h  rbox-sync.cpp  storage-backend-factory.h
src/tests/: Makefile.am  it_test_storage_rbox_2  test_repair_rbox  test_storage_mock_rbox_bugs
src/tests/dict-rados/: it_test_dict_rados.cpp
src/tests/docs/: README.md
src/tests/librmb/: it_test_librmb.cpp  test_librmb_utils.cpp
src/tests/mocks/: mock_test.h
src/tests/rmb/: test_rmb.cpp
src/tests/storage-mock-rbox/: test_repair_rbox.cpp  test_storage_mock_rbox.cpp  test_storage_mock_rbox_bugs.cpp
src/tests/storage-rbox/: it_test_check_metadata.cpp  it_test_copy_rbox.cpp  it_test_copy_rbox_alt.cpp  it_test_copy_rbox_fail.cpp  it_test_doveadm_backup_rbox.cpp  it_test_lda_rbox.cpp  it_test_move_rbox.cpp  it_test_move_rbox_alt.cpp  it_test_read_mail_failed_rbox.cpp  it_test_read_mail_rbox.cpp  it_test_read_mail_rbox_alt.cpp  it_test_storage_rbox.cpp
src/tests/sync-rbox/: it_test_sync_rbox.cpp  it_test_sync_rbox_2.cpp  it_test_sync_rbox_alt.cpp  it_test_sync_rbox_duplicate_uid.cpp
src/tests/test-utils/: it_utils.cpp  it_utils.h
tools/mcp-dovecot-builder/: README.md  mcp.json  package-lock.json  package.json
tools/mcp-dovecot-builder/src/: server.js
