#
# Copyright (c) 2017-2018 Tallence AG and the authors
#
# This is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 2.1, as published by the Free Software
# Foundation.  See file COPYING.

SUBDIRS = . tools

LIBINTERFACE = libinterface.la

libinterface_ladir = $(moduledir)

libinterface_la_LTLIBRARIES = \
    $(LIBINTERFACE)

libinterface_la_SOURCES = \
    rados-ceph-config.h \
    rados-ceph-json-config.h \
    rados-cluster.h \
    rados-dictionary.h \
    rados-dovecot-ceph-cfg.h \
    rados-guid-generator.h \
    rados-mail.h \
    rados-metadata-storage-module.h \
    rados-metadata-storage.h \
    rados-metadata.h \
    rados-namespace-manager.h \
    rados-save-log.h \
    rados-storage.h \
    rados-types.h \
    rados-util.h \
    rbox-io-ctx.h \
    rados-plugin-logger.h


